fix: confessions not showing

--- a/src/app/features/admin/admin-confessions/admin-confessions.scss
+++ b/src/app/features/admin/admin-confessions/admin-confessions.scss
@@ -19,6 +19,7 @@
 
     /* Confessions Section Container */
     .confessions-section {
+        margin-top: 100px;
         font-family: 'Roboto', sans-serif;
         padding: 30px 0; /* Add vertical padding for spacing */
         background-color: var(--section-background); /* Explicitly set opaque background */
@@ -62,6 +63,14 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
         gap: 25px;
+    }
+    button{
+        width: 90px;
+        height: 25px;
+        border-radius: 5px;
+        color: white;
+        border: none;
+        background-color: rgb(115, 27, 15);
     }
 
     /* Individual Confession Card */
